--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
 
             </div>
             <div class="windowControls">
-                <div class="close"><img alt="close" src="./assets/icons/windowControlsIcons/close.svg"></div>
-                <div class="maximize"><img alt="close" src="./assets/icons/windowControlsIcons/maximize.svg"></div>
-                <div class="minimize"><img alt="close" src="./assets/icons/windowControlsIcons/minimize.svg"></div>
+                <div class="close"><img alt="close" src="./assets/icons/windowControlsIcons/close.png"></div>
+                <div class="maximize"><img alt="close" src="./assets/icons/windowControlsIcons/maximize.png"></div>
+                <div class="minimize"><img alt="close" src="./assets/icons/windowControlsIcons/collapse.png"></div>
             </div>
         </div>
         <div class="mainBody">
